Fix slider overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,7 @@ body{
 .main-content{
   padding-right: 5px;
   padding-left: 5px;
+  overflow: hidden;
 }
 header{
   background: var(--color2);
